Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend
spec:
  podSelector:
    matchExpressions:
    - key: role
      operator: In
      values:
        - front-end
        - back-end-api
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: role
          operator: In
          values:
            - front-end
            - back-end-api
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-backend
spec:
  podSelector:
    matchExpressions:
    - key: role
      operator: In
      values:
        - admin-front-end
        - admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: role
          operator: In
          values:
            - admin-front-end
            - admin-back-end-api
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
